# SFML-Balls

./: CMakeLists.txt  CMakeSettings.json  README.md
include/SFML/Audio/: SoundSource.hpp
include/SFML/System/: Err.hpp
main/: CMakeLists.txt  main.cpp  music.hpp
